# setup_pytorch-install

./: .gitignore  README.md  hello.py  model.pth  pixi.toml  pyproject.toml  test_working-example.ipynb
.pixi/: prefix
src/test_pytorch_install/: __init__.py
