[project]
name = "test-uv-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "torch>=2.4.0",
    "torchvision>=0.9.0",
    "torchaudio>=2.4.0"
  # "torch>=2.4.0; sys_platform == 'darwin'",
  # "torchvision>=0.9.0; sys_platform == 'darwin'",
  # "torchaudio>=2.4.0; sys_platform == 'darwin'"
    ]

# Optional dependencies for cuda with wsl-ubuntu 
# activate with `uv sync --extras cuda`

[project.optional-dependencies]
cuda = [
    "torch>=2.4.0; sys_platform == 'linux'", 
    "torchvision>=0.9.0; sys_platform == 'linux'",
    "torchaudio>=2.4.0; sys_platform == 'linux'"
    ]

[tool.uv.sources]
cuda = { url = "https://download.pytorch.org/whl/cu124" }